fix improper height scale on mobile

--- a/timesite/backend/static/style.css
+++ b/timesite/backend/static/style.css
@@ -21,7 +21,7 @@ body {
     margin: 0;
     color: black;
     background-color: var(--bg-color);
-    min-height: 100vh;
+    min-height: 100svh;
     overflow-x: hidden;
     /* flex-direction: row;*/
 }
@@ -131,7 +131,7 @@ a {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100vh;
+    height: 100svh;
     overflow: hidden;
     align-items: center;
     justify-content: center;
